resource-manifests/sa-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-ingress
spec:
  backend:
    serviceName: nginx
    servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-fanout-ingress
  annotations:
    ingress.appscode.com/type: NodePort
spec:
  rules:
  - http:
      port: '8989'
      nodePort: '32666'
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
      - path: /nginx
        backend:
          serviceName: nginx
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sa-nginx-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8899
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
